# watermark_yuv

./: .gitignore  CMakeLists.txt
Watermark/: CMakeLists.txt  config.h.in  main.cpp
Watermark/Core/: CMakeLists.txt
Watermark/Core/ConcurrencyQueue/: concurrency_queue.h
Watermark/Core/Graphic/: CMakeLists.txt
Watermark/Core/Graphic/Frame/: cpu_frame.cpp  cpu_frame.h  cpu_frame_factory.h  file_frame_provider.cpp  file_frame_provider.h  frame_factory.h  frame_interface.h  frame_provider_interface.h  pixel_format.cpp  pixel_format.h
Watermark/Core/Graphic/Frame/Decoder/: bmp_decoder.cpp  bmp_decoder.h  decoder_interface.h  yuv420_decoder.cpp  yuv420_decoder.h
Watermark/Core/Graphic/Frame/Encoder/: encoder_interface.h  yuv420_encoder.cpp  yuv420_encoder.h
Watermark/Core/Graphic/FrameConvertor/: color_convertor_interface.h  cpu_brg24_to_yuv420_convertor.cpp  cpu_brg24_to_yuv420_convertor.h  cpu_frame_convertor.cpp  cpu_frame_convertor.h  frame_convertor_interface.h
Watermark/Core/Utilities/: stream_guard.h
Watermark/Watermark/: application.cpp  application.h  message.h  watermark_process.cpp  watermark_process.h
